# cookiecutter-flask

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .flaskenv  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  README.md  do  docker-compose.yml  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/tests/: __init__.py  base.py  test_simple.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  app.py  cli.py  config.py  db.py  logging.py  sentry.py  wsgi.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/main/: __init__.py  blueprint.py  cli.py  models.py  views.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/main/tests/: __init__.py  test_cli.py  test_views.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/migrations/: env.py  script.py.mako
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/: __init__.py  base.py  test___init__.py  test_app.py  test_cli.py  test_db.py  test_logging.py  test_sentry.py  test_wsgi.py
