[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email}}>"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["{{ cookiecutter.project_slug }}/migrations/**/*.*"]

[tool.poetry.dependencies]
python = "^3.5"
blinker = "^1.4"
Flask = "^1.0"
Flask-Migrate = "^2.4"
Flask-SQLAlchemy = "^2.3"
raven = "^6.10"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.3"
flake8-import-order = "^0.18.1"
Flask-Testing = "^0.7.1"
ipdb = "^0.12.0"
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
python-dotenv = "^0.10.1"
tox = "^3.8"
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.6"}
xenon = "^0.5.5"
selenium = "^3.141"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.cli:main'

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist

)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py35, py36, py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
