[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email}}>"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["{{ cookiecutter.project_slug }}/migrations/**/*.*"]

[tool.poetry.dependencies]
python = "^3.6"
blinker = "^1.4"
Flask = "^1.0"
Flask-Migrate = "^2.4"
Flask-SQLAlchemy = "^2.3"
psycopg2-binary = "^2.8"
sentry-sdk = {version = "^0.19.5", extras = ["flask"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.3"
flake8-import-order = "^0.18.1"
Flask-Testing = "^0.8.0"
ipdb = "^0.12.0"
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
python-json-logger = "^0.1.11"
python-dotenv = "^0.10.1"
selenium = "^3.141"
pre-commit = "^1.18"
flake8-polyfill = "^1.0.2"
radon = "^4.3.2"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.cli:main'

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist

)/
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
